force-app/main/default/objects/Product_Release__c/fields/Actual_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Release_Date__c</fullName>
    <description>Date that the version of the product was actually released publicly. This field should only be filled out upon release.</description>
    <inlineHelpText>Date that the version of the product was actually released publicly. This field should only be filled out upon release.</inlineHelpText>
    <label>Actual Release Date</label>
    <type>DateTime</type>
</CustomField>