force-app/main/default/objects/Product_Release__c/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <description>This is the build number for the release. This information is used to associate SRT data to Product Releases</description>
    <inlineHelpText>This is the software build number for this release</inlineHelpText>
    <label>Build</label>
    <length>20</length>
    <type>Text</type>
</CustomField>