force-app/main/default/objects/Product_Release__c/fields/Minor_Release__c.field-meta.xml
<CustomField>
    <fullName>Minor_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this release a small point release? Used only for reporting, indicating that this release should be excluded from most internal non-engineering reports</description>
    <inlineHelpText>Is this release a small point release? Used only for reporting, indicating that this release should be excluded from most internal non-engineering reports</inlineHelpText>
    <label>Minor Release</label>
    <type>Checkbox</type>
</CustomField>