force-app/main/default/objects/Product_Release__c/listViews/Activity_Tracker_Releases.listView-meta.xml
<ListView>
    <fullName>Activity_Tracker_Releases</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Estimated_Release_Date__c</columns>
    <columns>Percent_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Activity Tracker</value>
    </filters>
    <label>Activity Tracker Releases</label>
</ListView>