force-app/main/default/objects/Product_Release__c/listViews/Integration_Builder_Releases.listView-meta.xml
<ListView>
    <fullName>Integration_Builder_Releases</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Estimated_Release_Date__c</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Build__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Integration Builder</value>
    </filters>
    <label>Integration Builder Releases</label>
</ListView>