force-app/main/default/objects/Product_Release__c/listViews/Releases_with_no_actual_release_date2.listView-meta.xml
<ListView>
    <fullName>Releases_with_no_actual_release_date2</fullName>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>Actual_Release_Date__c</columns>
    <columns>Estimated_Release_Date__c</columns>
    <columns>Percent_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Actual_Release_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Releases with no actual release date</label>
    <language>en_US</language>
</ListView>