force-app/main/default/objects/Product_Release__c/listViews/Time_Builder_Releases.listView-meta.xml
<ListView>
    <fullName>Time_Builder_Releases</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Minor_Release__c</columns>
    <columns>Actual_Release_Date__c</columns>
    <columns>Limited_Support_Date__c</columns>
    <columns>Retired_Date__c</columns>
    <columns>Support_Level__c</columns>
    <columns>Build__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Time Builder</value>
    </filters>
    <label>Time Builder Releases</label>
</ListView>